--- a/src/temples/pages/game/my-bullpen.html
+++ b/src/temples/pages/game/my-bullpen.html
@@ -2,7 +2,44 @@
 <div>
 	<div>
 		牛栏(1头)
-		<hr>
+	    <section class="list">
+	    	<ul>
+	    		<li class="cow">
+	    			<figure>
+	    				图片<img src="" />
+	    			</figure>
+	    			<div class="desc">
+	    				<div class="cow_name">
+	    					天天牛#220
+	    				</div>
+	    				<div>
+	    					<span class="generation">0</span>代牛
+	    					<span class="hasBirth">可</span>生育
+	    				</div>
+	    				<div class="label">
+	    					创世牛
+	    				</div>
+	    			</div>
+	    		</li>
+	    		<li class="cow">
+	    			<figure>
+	    				图片<img src="" />
+	    			</figure>
+	    			<div class="desc">
+	    				<div class="cow_name">
+	    					天天牛#220
+	    				</div>
+	    				<div>
+	    					<span class="generation">0</span>代牛
+	    					<span class="hasBirth">可</span>生育
+	    				</div>
+	    				<div class="label">
+	    					创世牛
+	    				</div>
+	    			</div>
+	    		</li>
+	    	</ul>
+	    </section>
 	</div>
 </div>
 
