--- a/src/temples/pages/leaguercenter/billing-record.html
+++ b/src/temples/pages/leaguercenter/billing-record.html
@@ -2,6 +2,12 @@
 <!--账单记录顶部-->
 <div>
     账单记录
+    <section>
+    	<ul>
+    		<li>充值</li>
+    		<li>支出</li>
+    	</ul>
+    </section>
 </div>
 <%- include('../../document_temp/document-foot') %>
 </body>
