--- a/src/temples/pages/leaguercenter/leaguer-center.html
+++ b/src/temples/pages/leaguercenter/leaguer-center.html
@@ -2,6 +2,46 @@
 <!--个人中心顶部-->
 <div>
     个人中心
+    <div class="head">
+    	<div class="head_portrait">
+    		图片
+    	</div>
+    	<div class="userinfo">
+    		<div id="user_name">
+    			Phiuser 2343
+    		</div>
+    		<div>
+    			余额:<span id="balance">2342.1</span>
+    		</div>
+    		<div id="bindaddress">
+    			0xaca85de9f3c800331db42c6dcc65546e37bd6c99
+    		</div>
+    	</div>
+    </div>
+    <div class="btn_group clearfix">
+    	<input type="button" name="recharge" value="充值" id="recharge"/>
+    	<input type="button" name="withdraw" value="提现" />
+    </div>
+    <section class="list">
+    	<ul>
+    		<li>
+    			<a href="billing-record.html">
+    				账单记录
+    			</a>
+    		</li>
+    		<li>
+    			<a href="bindwallet.html">
+    				重新绑定钱包
+    			</a>
+    		</li>
+    	</ul>
+    </section>
+	<section class="list">
+    	<ul>
+    		<li>关于天天牛</li>
+    		<li>帮助中心</li>
+    	</ul>
+    </section>
 </div>
 <!--底部tab-->
 <%- include('../../page_temp/app-foot-nav') %>
