--- a/src/temples/pages/leaguercenter/recharge.html
+++ b/src/temples/pages/leaguercenter/recharge.html
@@ -2,6 +2,27 @@
 <!--充值顶部-->
 <div>
     充值
+    <div>
+    	余额:<span id="balance">2342.1</span>
+    </div>
+    <div>
+    	请使用当前绑定的钱包地址:
+    </div>
+    <div>
+    	0xaca85de9f3c800331db42c6dcc65546e37bd6c99
+    </div>
+    <div>
+    	向下面的指定账户转账:
+    </div>
+    <div>
+    	0xaca85de9f3c800331db42c6dcc65546e37bd6c99
+    </div>
+    <div>
+    	转账金额5分钟内到帐:
+    </div>
+    <div>
+    	<input type="button" name="refresh" value="已转账点我手动刷新余额" id="refresh"/>
+    </div>
 </div>
 <%- include('../../document_temp/document-foot') %>
 </body>
