--- a/src/temples/pages/petmarket/my-cow-detail.html
+++ b/src/temples/pages/petmarket/my-cow-detail.html
@@ -2,8 +2,45 @@
 <div>
     <div>
 		牛详情页
-		<hr>
-		<input type="button" name="purchase" id="purchase" value="购买" />
+		<div class="top_pic">
+			图片
+		</div>
+		<div class="purchase_btn_div">
+			<div class="pull_left">
+				售价:
+			</div>
+			<div class="pull_left">
+				<span id="price">243234</span> DDW
+			</div>
+			<div class="pull_right">
+				<input type="button" class="input_noramal" name="purchase"  id="purchase" value="购买" />
+			</div>
+		</div>
+		<section class="dec_title clearfix">
+			<div class="cow_name">
+				天天牛 #220
+			</div>
+			<div class="label">
+				<span class="tag">
+					创世牛
+				</span>
+				<span class="tag">
+					第<span class="generation">0</span>代
+				</span>
+			</div>
+		</section>
+		<section class="cow_attribute clearfix">
+			<ul>
+				<li><div>肤色:<span class="skin_color gray">灰色</span></div></li>
+				<li><div>花纹:<span class="decorative_pattern">牛奶纹</span></div></li>
+				<li><div>眼睛:<span class="eye">认真眼</span></div></li>
+				<li><div>嘴巴:<span class="mouse">咩咩嘴</span></div></li>
+				<li><div>鼻子:<span class="nose">朝天鼻</span></div></li>
+				<li><div>尾巴:<span class="tail">大波浪</span></div></li>
+				<li><div>牛角:<span class="ox_horn">黄金角</span></div></li>
+				<li><div>蹄子:<span class="hoof">流苏靴</span></div></li>
+			</ul>
+		</section>
 	</div>
 </div>
 
